<!--
  ~  Copyright 2016 Makoto Consulting Group, Inc.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">SimpleCursorAdapterExample</string>
    <string name="title_people">People:</string>
    <string name="title_firstName">First Name</string>
    <string name="title_lastName">Last Name</string>
    <string name="title_age">Age</string>
    <string name="title_eyeColor">Eye Color:</string>
    <string name="title_gender">Gender:</string>
    <string name="title_deleteAll">Delete All</string>
    <string name="title_addPerson">Add Person</string>
</resources>
