<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2016 Makoto Consulting Group, Inc.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingEnd="2sp"
              android:paddingLeft="5sp"
              android:paddingRight="2sp"
              android:paddingStart="5sp"
>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_firstName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp"
        />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_lastName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_list_row_firstName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
        />

        <TextView
            android:id="@+id/textview_list_row_lastName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_age"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
        />
        <TextView
            android:id="@+id/textview_list_row_age"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_eyeColor"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
        />
        <TextView
            android:id="@+id/textview_list_row_eyeColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_gender"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
        />
        <TextView
            android:id="@+id/textview_list_row_gender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
        />
    </LinearLayout>

</LinearLayout>